# crochess

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  LICENSE  LICENSE.txt  LICENSE_LINENOISE  LICENSING  README.md  README.txt  TASKS.md  VERSION.txt  backup.sh  build.py  cc-opts.sh  clean.sh  compile.sh  ctags.sh  dlls.sh  env.sh  gfx.sh  libs.sh  pdf.sh  pdf2.sh  push.py  push_book.sh  re_pdf.sh  test.sh  tests.sh  upd_ln.sh
.github/: FUNDING.yml
book/: COPYING  LICENSING  TASKS.md  crochess.tex
docs/: LICENSING
inc/: lst_node.h  map_node.h  utils.h
py/: __init__.py  book_ver.py  build_env.py  docs_env.py  git_run.py  paths.py  run_compiler.py  run_git.py  run_subproc.py  update_ver.py
src/: Board.hs  BoardInitialize.hs  BoardInitializeDark.hs  BoardInitializeLight.hs  BoardType.hs  Common.hs  CommonString.hs  (+17 more)
ws/crochess/: Cargo.toml
ws/crochess/inc/: crochess.h  hlp_msgs.h  linenoise.h  tests.h  tests_do_move.h
ws/crochess/src/: crochess.c  crochess.d  hlp_msgs.c  hlp_msgs.rs  linenoise.c  main.rs  tests.c  tests_do_move.c
ws/libcrochess/: Cargo.toml
ws/libcrochess/docs/: 1_organization.md  2_memory.md  design.md  main.md  memory.md  organization.md
ws/libcrochess/inc/: board.h  board_type.h  cc_checks.h  cc_chessboard.h  cc_context.h  cc_defines.h  cc_do_bishop.h  cc_do_move.h  cc_do_moves.h  cc_do_ply.h  cc_format_moves.h  cc_game.h  cc_gen_piece_steps.h  cc_gen_pos.h  cc_gen_steps.h  cc_math.h  cc_move.h  cc_moves.h  cc_parse.h  cc_parse_defs.h  cc_parse_move.h  cc_parse_msg.h  cc_parse_msgs.h  cc_parse_ply.h  cc_parse_side_effect.h  cc_parse_step.h  cc_parse_utils.h  cc_parsed_move.h  cc_parsed_move_fmt.h  cc_parsed_ply.h  cc_parsed_side_effect.h  cc_parsed_step.h  cc_parser.h  cc_path.h  cc_path_cmp.h  cc_path_ctx.h  cc_path_defs.h  cc_path_gens.h  cc_path_one_step.h  cc_path_single_step.h  (+49 more)
ws/libcrochess/src/: ascii_checks.rs  board.c  board.d  board.rs  board_type.c  board_type.d  board_type.rs  cc_checks.c  cc_chessboard.c  cc_context.c  cc_do_bishop.c  cc_do_move.c  cc_do_moves.c  cc_do_ply.c  cc_format_moves.c  cc_game.c  cc_gen_piece_steps.c  cc_gen_pos.c  cc_gen_steps.c  cc_math.c  cc_move.c  cc_moves.c  cc_parse.c  cc_parse_defs.c  cc_parse_move.c  cc_parse_msg.c  cc_parse_msgs.c  cc_parse_ply.c  cc_parse_side_effect.c  cc_parse_step.c  cc_parse_tree.c  cc_parse_utils.c  cc_parsed_move.c  cc_parsed_move_fmt.c  cc_parsed_ply.c  cc_parsed_side_effect.c  cc_parsed_step.c  cc_parser.c  cc_path.c  cc_path_cmp.c  (+72 more)
(+194 files in other folders)
