[package]
name = "crochess"
version = "0.1.7+20210314234415" # config-new-app-version-major-minor-patch+build-place-marker
authors = ["Mario Mlačak <mmlacak@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcrochess = { path = "../libcrochess" } # from a path in the local filesystem
