[package]
name = "libcrochess"
version = "0.1.14+20210321.090259" # config-new-lib-version-major-minor-patch+build-place-marker
authors = ["Mario Mlačak <mmlacak@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
